--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "NODE_PATH=src jest",
+    "test": "jest",
     "test:coverage": "npm run test -- --collectCoverage",
     "lint": "tslint -t codeFrame -p .",
     "prepare": "npm run build",
@@ -37,6 +37,7 @@
     "dist"
   ],
   "dependencies": {
+    "callsites": "^3.1.0",
     "typescript": ">=1.7"
   },
   "devDependencies": {
