--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "main": "./dist/index.js",
   "engines": {
-    "node": "^10.14.0"
+    "node": ">=10.14.0"
   },
   "repository": {
     "type": "git",
